update rust template linter rules

--- a/templates/rust/Cargo.toml
+++ b/templates/rust/Cargo.toml
@@ -6,10 +6,8 @@ edition = "2024"
 [dependencies]
 
 [lints.clippy]
-pedantic = { level = "deny", priority = -1 }
-nursery = { level = "deny", priority = -1 }
-unwrap_used = "deny"
-redundant_pub_crate = "warn"
+pedantic = "warn"
+nursery = "warn"
 correctness = "warn"
-performance = "warn"
+perf = "warn"
 style = "warn"
